# pgpt-python

./: pyproject.toml
.devcontainer/: devcontainer.json
docker/local/: .env.example  docker-compose.yml
docker/local/pgpt/: .env.example  Dockerfile  start.sh
