[tool.poetry]
name = "pgpt_python"
version = "0.1.4"
description = "PrivateGPT Python SDK"
authors = ["imartinez <ivanmartit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
httpx = ">=0.28.1"
pydantic = ">=2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
